--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="Selenium"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="Libraries/selenium-server-standalone-2.53.1.jar"/>
+	<classpathentry kind="lib" path="Libraries/selenium-server-standalone-3.141.59.jar" sourcepath="Libraries/client-combined-3.141.59-sources.jar"/>
+	<classpathentry kind="lib" path="Libraries/testng-6.14.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
